Mac: Clean up ui::Compositor recycling

Tab switch was often janky because we would end up creating and
destroying a ui::Compositor during tab-switch. Fix this by posting a
task to free the "spare" ui::Compositors. This fix has two effects.

First, this doesn't destroy the compositor while the browser compositor
is potentially waiting for a from the switched-to-tab to come in
(reducing contention).

Second, by posting a task to free up compositors, it allows us to be in
transient states where we have more than one "spare" ui::Compositor,
which indeed happens when opening a new tab.

BUG=630028

Review-Url: https://codereview.chromium.org/2167003002
Cr-Commit-Position: refs/heads/master@{#406787}

Former-commit-id: 1f260a62accfc82c4bc7d7578bb3edb9116a1056